--- a/tests/geometry/geometry.css
+++ b/tests/geometry/geometry.css
@@ -8,7 +8,7 @@ section>div {
 }
 
 .bordered {
-  border:1px solid var(--muted-color);
+  border:1px solid var(--muted-border-color);
 }
 
 section h2 {
