--- a/www/src/styles/theme.css
+++ b/www/src/styles/theme.css
@@ -86,18 +86,15 @@ body {
 :root.theme-dark {
 	color-scheme: dark;
 	--theme-accent-opacity: 0.15;
-	--theme-color: var(--color-base-orange);
-	--theme-color-inverse: black; 
-	--theme-accent: hsla(var(--theme-color), 1);
-	--theme-text-accent: hsla(var(--color-orange), 1);
+	--theme-accent: hsla(var(--color-blue), 1);
+	--theme-text-accent: hsla(var(--color-blue), 1);
 	--theme-divider: hsla(var(--color-gray-10), 1);
 	--theme-text: hsla(var(--color-gray-90), 1);
 	--theme-text-light: hsla(var(--color-gray-80), 1);
-	
+
 	/* @@@: not used anywhere */
 	--theme-text-lighter: hsla(var(--color-gray-40), 1);
-	--theme-bg: hsl(206, 29%, 9%);
-	--theme-bg-contrast: hsl(206, 20%, 15%);
+	--theme-bg: hsla(215, 28%, 17%, 1);
 	--theme-bg-hover: hsla(var(--color-gray-40), 1);
 	--theme-bg-offset: hsla(var(--color-gray-5), 1);
 	--theme-code-inline-bg: hsla(var(--color-gray-10), 1);
@@ -106,32 +103,7 @@ body {
 	--theme-code-text: hsla(var(--color-base-white), 100%, 1);
 	--theme-navbar-bg: hsla(215, 28%, 17%, 1);
 	--theme-selection-color: hsla(var(--color-base-white), 100%, 1);
-	--theme-selection-bg: hsla(var(--color-yellow), 0.5);
-
-	--muted-border-color: var(--theme-bg-contrast);
-	--theme-secondary: red;
-	--theme-bg-darker: hsla(215, 28%, 10%, 1);
-	--theme-bg-lighter: hsla(var(--theme-bg), 28%, 30%, 1);
-	--theme-accent-hover: hsla(var(--color-blue), 1);
-  --form-element-background-color: var(--theme-bg-contrast);
-  --form-element-border-color: var(--muted-border-color);
-  --form-element-color: var(--color-base-orange);
-  --form-element-placeholder-color: var(--muted-color);
-  --form-element-active-background-color: var(--theme-bg-contrast);
-  --form-element-active-border-color: var(--theme-accent);
-  --form-element-focus-color: var(--primary-focus);
-  --form-element-disabled-background-color: var(--theme-bg);
-  --form-element-disabled-border-color: hsla(var(--color-gray-10), 0.8);
-  --form-element-disabled-opacity: 0.5;
-  --form-element-invalid-border-color: #c62828;
-  --form-element-invalid-active-border-color: #d32f2f;
-  --form-element-invalid-focus-color: rgba(211, 47, 47, 0.125);
-  --form-element-valid-border-color: #388e3c;
-  --form-element-valid-active-border-color: #43a047;
-  --form-element-valid-focus-color: rgba(67, 160, 71, 0.125);
- 
-  --primary-focus: rgba(16, 149, 193, 0.125);
-  --primary-inverse: #fff;
+	--theme-selection-bg: hsla(var(--color-purple), var(--theme-accent-opacity));
 
 	/* DocSearch [Algolia] */
 	--docsearch-modal-background: var(--theme-bg);
@@ -143,17 +115,6 @@ body {
 	--docsearch-hit-color: var(--theme-text);
 	--docsearch-footer-shadow: inset 0 2px 10px #000;
 	--docsearch-modal-shadow: inset 0 0 8px #000;
-
-	--icon-checkbox: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23FFF' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E");
-	--icon-chevron: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgba(162, 175, 185, 0.999)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
-	--icon-close: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgba(115, 130, 140, 0.999)' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='18' y1='6' x2='6' y2='18'%3E%3C/line%3E%3Cline x1='6' y1='6' x2='18' y2='18'%3E%3C/line%3E%3C/svg%3E");
-	--icon-date: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgba(162, 175, 185, 0.999)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect x='3' y='4' width='18' height='18' rx='2' ry='2'%3E%3C/rect%3E%3Cline x1='16' y1='2' x2='16' y2='6'%3E%3C/line%3E%3Cline x1='8' y1='2' x2='8' y2='6'%3E%3C/line%3E%3Cline x1='3' y1='10' x2='21' y2='10'%3E%3C/line%3E%3C/svg%3E");
-	--icon-invalid: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgba(183, 28, 28, 0.999)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='12' cy='12' r='10'%3E%3C/circle%3E%3Cline x1='12' y1='8' x2='12' y2='12'%3E%3C/line%3E%3Cline x1='12' y1='16' x2='12.01' y2='16'%3E%3C/line%3E%3C/svg%3E");
-	--icon-minus: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23FFF' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='5' y1='12' x2='19' y2='12'%3E%3C/line%3E%3C/svg%3E");
-	--icon-search: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgba(162, 175, 185, 0.999)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='11' cy='11' r='8'%3E%3C/circle%3E%3Cline x1='21' y1='21' x2='16.65' y2='16.65'%3E%3C/line%3E%3C/svg%3E");
-	--icon-time: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgba(162, 175, 185, 0.999)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='12' cy='12' r='10'%3E%3C/circle%3E%3Cpolyline points='12 6 12 12 16 14'%3E%3C/polyline%3E%3C/svg%3E");
-	--icon-valid: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgba(46, 125, 50, 0.999)' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E");
-
 }
 
 ::selection {
