--- a/www/src/pages/en/modulation/Envelope.astro
+++ b/www/src/pages/en/modulation/Envelope.astro
@@ -37,10 +37,17 @@
       Looping
     </label>
   </section>
+  <section>
+    <label>
+      Show
+      <select id="selectShow">
+        <option value="scaled">Scaled</option>
+        <option value="raw">Raw</option>
+      </select>
+    </label>
+  </section>
 </div>
 <div class="sxs">
-  <div>
-    <canvas id="envData" height="300" width="200"></canvas>
-    </div>
+  <div id="envData"></div>
   <div id="envDataStream"></div>
 </div>
