--- a/www/src/components/Header/Header.astro
+++ b/www/src/components/Header/Header.astro
@@ -50,7 +50,7 @@ const lang = currentPage && getLanguageFromURL(currentPage);
 	.logo {
 		display: flex;
 		overflow: hidden;
-		width: 30px;
+		min-width: 30px;
 		font-size: 2rem;
 		flex-shrink: 0;
 		font-weight: 600;
