--- a/www/src/components/PageContent/PageContent.astro
+++ b/www/src/components/PageContent/PageContent.astro
@@ -25,7 +25,7 @@ const headers = content?.astro?.headers;
 <style>
 	.content {
 		padding: 0;
-		max-width: 75ch;
+		/* max-width: 75ch; */
 		width: 100%;
 		height: 100%;
 		display: flex;
