--- a/www/src/pages/en/geometry/GridVisitorPlay.astro
+++ b/www/src/pages/en/geometry/GridVisitorPlay.astro
@@ -19,10 +19,11 @@
       <option>Breadth</option>
       <option>Row</option>
       <option>Column</option>
+      <option>Random Contiguous</option>
       <option>Random</option>
     </select>
   </section>
 </div>
 <div>
-  <grid-editor rows="15" cols="15" pixelSize="15" id="visGrid" />
+  <grid-editor rows="5" cols="5" pixelSize="20" id="visGrid" />
 </div>
