--- a/www/src/components/Header/Header.astro
+++ b/www/src/components/Header/Header.astro
@@ -4,8 +4,8 @@ import * as CONFIG from '../../config.ts';
 import AstroLogo from './AstroLogo.astro';
 import SkipToContent from './SkipToContent.astro';
 import SidebarToggle from './SidebarToggle.tsx';
-import LanguageSelect from './LanguageSelect.tsx';
-import Search from './Search.tsx';
+//import LanguageSelect from './LanguageSelect.tsx';
+//import Search from './Search.tsx';
 
 const { currentPage } = Astro.props;
 const lang = currentPage && getLanguageFromURL(currentPage);
@@ -24,12 +24,12 @@ const lang = currentPage && getLanguageFromURL(currentPage);
 			</a>
 		</div>
 		<div style="flex-grow: 1;"></div>
-		{KNOWN_LANGUAGE_CODES.length > 1 && <LanguageSelect lang={lang} client:idle />}
-		{CONFIG.ALGOLIA && (
+		<!-- {KNOWN_LANGUAGE_CODES.length > 1 && <LanguageSelect lang={lang} client:idle />} -->
+		<!-- {CONFIG.ALGOLIA && (
 			<div class="search-item">
 				<Search client:idle />
 			</div>
-		)}
+		)} -->
 	</nav>
 </header>
 
