--- a/www/src/pages/en/geometry/GridVisitorPlay.astro
+++ b/www/src/pages/en/geometry/GridVisitorPlay.astro
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href={Astro.resolve('../../../styles/demos.css')} />
-<script type="module" src={Astro.resolve('./../../../../../src/dom/GridEditor.ts')}></script>
+<script type="module" src={Astro.resolve('../../../components/GridEditor.ts')}></script>
 <script type="module" src={Astro.resolve('./grid.ts')}></script>
 <style>
   #visGrid {
