--- a/www/src/pages/data/StateMachinePlay.astro
+++ b/www/src/pages/data/StateMachinePlay.astro
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href={Astro.resolve('../../styles/demos.css')} />
+<!-- <link rel="stylesheet" href={Astro.resolve('../../styles/demos.css')} /> -->
 <script type="module" src={Astro.resolve('./stateMachine.ts')}></script>
 
 <style>
