--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -23,6 +23,10 @@
     --dark-hl-10: #4EC9B0;
     --light-hl-11: #000000;
     --dark-hl-11: #C8C8C8;
+    --light-hl-12: #FF0000;
+    --dark-hl-12: #9CDCFE;
+    --light-hl-13: #0451A5;
+    --dark-hl-13: #CE9178;
     --light-code-background: #F5F5F5;
     --dark-code-background: #1E1E1E;
 }
@@ -40,6 +44,8 @@
     --hl-9: var(--light-hl-9);
     --hl-10: var(--light-hl-10);
     --hl-11: var(--light-hl-11);
+    --hl-12: var(--light-hl-12);
+    --hl-13: var(--light-hl-13);
     --code-background: var(--light-code-background);
 } }
 
@@ -56,6 +62,8 @@
     --hl-9: var(--dark-hl-9);
     --hl-10: var(--dark-hl-10);
     --hl-11: var(--dark-hl-11);
+    --hl-12: var(--dark-hl-12);
+    --hl-13: var(--dark-hl-13);
     --code-background: var(--dark-code-background);
 } }
 
@@ -72,6 +80,8 @@ body.light {
     --hl-9: var(--light-hl-9);
     --hl-10: var(--light-hl-10);
     --hl-11: var(--light-hl-11);
+    --hl-12: var(--light-hl-12);
+    --hl-13: var(--light-hl-13);
     --code-background: var(--light-code-background);
 }
 
@@ -88,6 +98,8 @@ body.dark {
     --hl-9: var(--dark-hl-9);
     --hl-10: var(--dark-hl-10);
     --hl-11: var(--dark-hl-11);
+    --hl-12: var(--dark-hl-12);
+    --hl-13: var(--dark-hl-13);
     --code-background: var(--dark-code-background);
 }
 
@@ -103,4 +115,6 @@ body.dark {
 .hl-9 { color: var(--hl-9); }
 .hl-10 { color: var(--hl-10); }
 .hl-11 { color: var(--hl-11); }
+.hl-12 { color: var(--hl-12); }
+.hl-13 { color: var(--hl-13); }
 pre, code { background: var(--code-background); }
